--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "tsc",
+    "watch": "tsc -w",
+    "dev": "nodemon dist/app.js",
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.1.2",
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
