--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
