--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
+    "content-type-parser": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -19,11 +20,14 @@
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "mysql2": "^3.1.2",
+    "npm": "^10.0.0",
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.4",
@@ -33,9 +37,13 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
+    "@types/multiparty": "^0.0.33",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
